<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="#AA2020"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:src="@drawable/tfw"
                android:background="#000000"
                />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minminfag1"
                android:textColor="#ffffff"
                android:textSize="26dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minminfag3"
                android:textColor="#ffffff"
                android:textSize="12dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minminfag2"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/minminfag4"
        android:id="@+id/letsgo"
        android:layout_alignParentBottom="true"
        android:textColor="#ffffff"
        android:background="#20000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>

